--- a/src/components/Slider/SliderBase/SliderBase.scss
+++ b/src/components/Slider/SliderBase/SliderBase.scss
@@ -10,80 +10,14 @@
     width: 100%;
   }
 
-  &__rail {
-    cursor: pointer;
-    display: inline-block;
-    position: relative;
-    touch-action: none;
-    -webkit-tap-highlight-color: transparent;
-    width: 100%;
-  }
-
-  &__track {
-    position: absolute;
-    border-radius: inherit;
-    @include theme-prop(background-color, primary-selected-color);
-    height: inherit;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-  }
-
-  &__filled-track {
-    position: absolute;
-    border-radius: inherit;
-    @include theme-prop(background-color, primary-color);
-    height: inherit;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 100%;
-  }
-
-  &__thumb {
-    position: absolute;
-    border: 3px solid;
-    border-radius: 50%;
-    @include theme-prop(border-color, primary-color);
-    @include theme-prop(background-color, primary-background-color);
-    font-size: 14px;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    transition: transform var(--motion-productive-long) var(--motion-timing-enter);
-    &--dragging {
-      cursor: grabbing !important;
-      transform: translate(-50%, -50%) scale(1.33, 1.33);
-      transform-origin: center center;
-      transition: transform var(--motion-productive-long) var(--motion-timing-enter);
-      @include box-shadow-small();
-    }
-    &--focused {
-      @include theme-prop(border-color, primary-hover-color);
-      cursor: grab;
-      @include box-shadow-small();
-    }
-  }
-
-  &__thumb-label {
-    bottom: calc(100% + 8px);
-    left: 50%;
-    max-width: 50px;
-    overflow: hidden;
-    position: absolute;
-    text-overflow: ellipsis;
-    transform: translate(-50%, 0);
-    white-space: nowrap;
-  }
-
   // thumb (for NOT-disabled)
   &:not(&--disabled) {
-    .monday-slider {
-      &__thumb {
-        @include focus-style(50%);
-        &:hover {
-          @include theme-prop(border-color, primary-hover-color);
-          cursor: grab;
-          @include box-shadow-small();
-        }
+    .monday-slider__thumb {
+      @include focus-style(50%);
+      &:hover {
+        @include theme-prop(border-color, primary-hover-color);
+        cursor: grab;
+        @include box-shadow-small();
       }
     }
   }
