Refactor, minor fixes, snapshot update

--- a/src/components/Dialog/Dialog.module.scss
+++ b/src/components/Dialog/Dialog.module.scss
@@ -2,7 +2,7 @@
 
 $arrow-size: 12px;
 
-:global(.monday-style-tooltip-arrow) {
+.tooltipArrow {
   width: $arrow-size;
   height: $arrow-size;
   position: absolute;
