--- a/src/components/Combobox/Combobox.module.scss
+++ b/src/components/Combobox/Combobox.module.scss
@@ -22,15 +22,15 @@
 
 /* Relative to Search height */
 
-.stickyCategory.sizeSmall .category {
+.stickyCategory.small .category {
   top: 32px;
 }
 
-.stickyCategory.sizeMedium .category {
+.stickyCategory.medium .category {
   top: 40px;
 }
 
-.stickyCategory.sizeLarge .category {
+.stickyCategory.large .category {
   top: 48px;
 }
 
