--- a/src/components/ColorPicker/components/ColorPickerItemComponent/ColorPickerItemComponent.module.scss
+++ b/src/components/ColorPicker/components/ColorPickerItemComponent/ColorPickerItemComponent.module.scss
@@ -68,17 +68,17 @@
   margin-top: 3px;
 }
 
-.colorItem.colorItemSizeSmall {
+.colorItem.small {
   width: 24px;
   height: 24px;
 }
 
-.colorItem.colorItemSizeMedium {
+.colorItem.medium {
   width: 32px;
   height: 32px;
 }
 
-.colorItem.colorItemSizeLarge {
+.colorItem.large {
   width: 40px;
   height: 40px;
 }
