update Daterpicker story

--- a/src/components/DatePicker/DatePicker.scss
+++ b/src/components/DatePicker/DatePicker.scss
@@ -393,4 +393,7 @@
       @include theme-prop(background-color, secondary-background-color);
     }
   }
+  .CalendarDay--blocked-calendar:active {
+    background: none;
+  }
 }
