--- a/src/components/DatePicker/__stories__/DatePicker.stories.scss
+++ b/src/components/DatePicker/__stories__/DatePicker.stories.scss
@@ -1,7 +1,6 @@
 @import "../../../styles/themes.scss";
 
-.date-picker-rules-container {
-.monday-storybook-component-rule_component{
-    height: 330px;
-}
+.datepicker-dialog-content-container{
+    padding-top: 26px;
+    padding-bottom: 0;
 }
