--- a/src/components/DatePicker/DateNavigationItem/DateNavigationItem.scss
+++ b/src/components/DatePicker/DateNavigationItem/DateNavigationItem.scss
@@ -6,9 +6,5 @@
   line-height: 36px;
   font-size: 28px;
   outline: none;
-  @include theme-prop(color, secondary-text-on-secondary-color);
-
-  &:hover {
-    @include theme-prop(color,primary);
-  }
+  @include theme-prop(color, icon-color);
 }
