--- a/src/components/AvatarGroup/AvatarGroupCounter.module.scss
+++ b/src/components/AvatarGroup/AvatarGroupCounter.module.scss
@@ -1,4 +1,4 @@
-@import "../../components/Avatar/Avatar.module.scss";
+@import "../../components/Avatar/Avatar";
 
 .counterContainer {
   background: var(--primary-background-hover-color);
