--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -13,10 +13,16 @@
 
 .container[aria-hidden="true"] {
   display: none;
+
+  .overlay {
+    background-color: transparent;
+    animation: overlay-fade-out 70ms var(--motion-timing-enter);
+  }
 }
 
 .overlay {
   background-color: rgba(41, 47, 76, 0.7);
+  animation: overlay-fade-in 70ms var(--motion-timing-enter);
 }
 
 .dialog {
@@ -38,5 +44,23 @@
 
   &.full {
     width: 100vw;
+  }
+}
+
+
+@keyframes overlay-fade-in{
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
+@keyframes overlay-fade-out{
+  from{
+    opacity: 1;
+  }
+  to{
+    opacity: 0;
   }
 }
