--- a/src/components/Dropdown/components/ValueContainer/ValueContainer.module.scss
+++ b/src/components/Dropdown/components/ValueContainer/ValueContainer.module.scss
@@ -1,38 +1,38 @@
 @import "../../../../styles/themes";
 @import "../../../../styles/typography";
 
-.placeholder-container {
+.placeholderContainer {
   margin-left: 6px;
 }
 
-.multiselect-chip-multi-line {
+.multiselectChipMultiLine {
   margin: 2px;
 }
 
-.multiselect-chip-single-line {
+.multiselectChipSingleLine {
   margin: 5px 2px;
 }
 
-.value-container {
+.valueContainer {
   display: flex;
   align-items: center;
   width: 100%;
   height: 100%;
 }
 
-.value-container-chips {
+.valueContainerChips {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   flex-grow: 1;
   height: 100%;
   overflow: hidden;
-
-  &.without-placeholder {
-    margin-left: 6px;
-  }
 }
 
-.value-container-dialog-content {
+.valueContainerChipsWithoutPlaceholder {
+  margin-left: 6px;
+}
+
+.valueContainerDialogContent {
   max-width: 300px;
 }
