--- a/src/components/DatePicker/__stories__/DatePicker.stories.scss
+++ b/src/components/DatePicker/__stories__/DatePicker.stories.scss
@@ -1,6 +1,6 @@
 @import "../../../styles/themes.scss";
 
 .datepicker-dialog-content-container{
-    padding-top: 26px;
+    padding-top:0;
     padding-bottom: 0;
 }
