--- a/src/components/DatePicker/DateNavigationItem/DateNavigationItem.scss
+++ b/src/components/DatePicker/DateNavigationItem/DateNavigationItem.scss
@@ -3,4 +3,9 @@
   font-size: 28px;
   outline: none;
   color: var(--icon-color);
+  border: none;
+  padding: 0;
+  margin: 0;
+  background: none;
+  cursor: pointer;
 }
