--- a/src/components/DatePicker/DatePickerHeader/DatePickerHeader.scss
+++ b/src/components/DatePicker/DatePickerHeader/DatePickerHeader.scss
@@ -5,6 +5,10 @@
   align-items: center;
 
   .date-picker-header-component-button-container {
+    border: none;
+    padding: 0;
+    margin: 0;
+    background: none;
     margin-left: 4px;
     cursor: pointer;
 
