Feature/yonatanari/re factor hacker theme structure (#164)
* Restructure Hacker Theme
* Create new hacker theme config tokens
* Create new hacker theme config maps
* Create new hacker theme loader
* Dark and Black Theme Typo corrections

* Restructure Hacker Theme test hacker theme keys
* Add debug keys

* Add hacker theme legacy debug

* Set debug to false

* Fix typo

--- a/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
+++ b/src/config/maps/themes/dark/keys/_dark-theme-keys.scss
@@ -1,4 +1,4 @@
-// BASIC THEME KEYS
+// DARK THEME KEYS
 
 // DARK THEME COLOR KEYS MAP: dark theme's keys color map.
 // - Map include semantic color keys scope tokens.
