--- a/src/debug/_debug-value-maps.scss
+++ b/src/debug/_debug-value-maps.scss
@@ -17,3 +17,7 @@
 // Import BLACK THEME
 @import "maps/black/debug-black-theme-keys-maps";
 @import "maps/black/debug-black-theme-legacy-keys-maps";
+
+// Import HACKER THEME
+@import "maps/hacker/debug-hacker-theme-keys-maps";
+@import "maps/hacker/debug-hacker-theme-legacy-keys-maps";
