change to css modules

--- a/src/components/DatePicker/DateNavigationItem/DateNavigationItem.module.scss
+++ b/src/components/DatePicker/DateNavigationItem/DateNavigationItem.module.scss
@@ -1,7 +1,6 @@
-.ds-date-navigation-item-component {
+.navigationItemContainer {
   line-height: 36px;
   font-size: 28px;
-  outline: none;
   color: var(--icon-color);
   border: none;
   padding: 0;
