--- a/src/components/AlertBanner/AlertBanner.module.scss
+++ b/src/components/AlertBanner/AlertBanner.module.scss
@@ -12,22 +12,22 @@
   font-size: 14px;
 }
 
-.backgroundColorPrimary {
+.primary {
   @include theme-prop(background-color, primary-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.backgroundColorPositive {
+.positive {
   @include theme-prop(background-color, positive-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.backgroundColorNegative {
+.negative {
   @include theme-prop(background-color, negative-color);
   @include theme-prop(color, text-color-on-primary);
 }
 
-.backgroundColorDark {
+.dark {
   @include theme-prop(background-color, inverted-color-background);
   @include theme-prop(color, text-color-on-inverted);
 }
