Fix flex grow loading state size. (#879)
* Fix flex grow loading state size.
* Add max for width and height.

* Fix extra semi colon.

* Update Snapshots

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -49,7 +49,9 @@
     min-width: 0;
     &.has-style-size {
       width: var(--element-height);
+      max-width: var(--element-height);
       height: var(--element-height);
+      max-height: var(--element-height);
     }
     position: relative;
   }
