--- a/src/components/Toast/Toast.scss
+++ b/src/components/Toast/Toast.scss
@@ -110,3 +110,7 @@
     animation-timing-function: var(--motion-timing-enter);
   }
 }
+
+.monday-style-toast-content{
+  font-family: var(--subtext-font-family);
+}
